# birthdays

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/ldap/: client.rs  user.rs
