[package]
name = "birthday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldap3 = "0.10.2"
rand = "0.8.5"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
trust-dns-resolver = { version = "0.21.1", features = ["tokio-runtime"] }
lazy_static = "1.4.0"
chrono = "*"

